@@ -2,6 +2,7 @@
 Version 0.8.8   - xx January 2002
   * Allow pychecker to be imported (in your code do: import pychecker.check)
   * Using vars() for format string argument works like locals()
+  * Make unusedNames a prefix, so emptyVal, unusedVal, etc are also ignored
   * Fix -a/--initattr warning to actually warn when attributes 
         are set outside of __init__(), but not in __init__()
   * Fix spurious warnings for unreachable code (not enough to enable, yet)
